1.1.16 some fixes on mobile view

--- a/styles/homeContainerStyle.css
+++ b/styles/homeContainerStyle.css
@@ -17,8 +17,8 @@
 }
 
 .homeImgContainer {
-    width: 15%;
-    height: 15%;
+    width: var(15% + 100px);
+    height: var(15% + 100px);
 }
 
 .homeImgContainer svg{
